# mini-kafka

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml
benches/: criterion.toml  kafka_benchmarks.rs
examples/: distributed_setup.rs  pubsub_demo.rs  simple_consumer.rs  simple_producer.rs  storage_management_demo.rs
src/: lib.rs  main.rs
src/broker/: mod.rs  partition.rs  storage.rs  topic.rs
src/client/: consumer.rs  mod.rs  producer.rs
src/config/: mod.rs  settings.rs
src/logging/: distributed_log.rs  mod.rs
src/network/: mod.rs  protocol.rs  server.rs
tests/: integration_tests.rs  unit_tests.rs
