[package]
name = "mini-kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.0"
parking_lot = "0.12"
bytes = "1.0"
bincode = "1.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full", "test-util"] }

# criterion for benchmarking
criterion = { version = "0.5", features = ["async_futures"] }
fastrand = "2.0"

[[bench]]
name = "kafka_benchmarks"
harness = false
